--- a/Proyecto1/HTML y CSS/Creeper.html
+++ b/Proyecto1/HTML y CSS/Creeper.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="Creeper.css">
 </head>
 <body>
+<div>300x300</div>
   <div class="pixel-art"></div>
+  
 </body>
 </html>
