--- a/Proyecto1/HTML y CSS/Hongo.html
+++ b/Proyecto1/HTML y CSS/Hongo.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="Hongo.css">
 </head>
 <body>
+<div>320x320</div>
   <div class="pixel-art"></div>
+  
 </body>
 </html>
